# api/docs/swagger.yaml
@@ -13,6 +13,16 @@ definitions:
       refresh_token:
         type: string
     type: object
+  github_com_imlargo_medusa_internal_dto.LoginWithPassword:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    required:
+    - email
+    - password
+    type: object
   github_com_imlargo_medusa_internal_dto.RegisterUser:
     properties:
       email:
@@ -68,6 +78,38 @@ info:
   title: Medusa
   version: "1.0"
 paths:
+  /v1/auth/login:
+    post:
+      consumes:
+      - application/json
+      description: Login user with email and password
+      parameters:
+      - description: Login user request payload
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/github_com_imlargo_medusa_internal_dto.LoginWithPassword'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: User logged in successfully
+          schema:
+            $ref: '#/definitions/github_com_imlargo_medusa_internal_dto.AuthResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_imlargo_medusa_pkg_medusa_core_responses.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_imlargo_medusa_pkg_medusa_core_responses.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Login user
+      tags:
+      - auth
   /v1/auth/register:
     post:
       consumes:
@@ -98,6 +140,29 @@ paths:
       security:
       - BearerAuth: []
       summary: Register user
+      tags:
+      - auth
+  /v1/auth/user:
+    get:
+      description: Get the authenticated user's information
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Authenticated user's
+          schema:
+            $ref: '#/definitions/github_com_imlargo_medusa_internal_models.User'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/github_com_imlargo_medusa_pkg_medusa_core_responses.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_imlargo_medusa_pkg_medusa_core_responses.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Get user info
       tags:
       - auth
 securityDefinitions:
