# internal/dto/auth.go
@@ -4,7 +4,7 @@ import "github.com/imlargo/medusa/internal/models"
 
 type LoginWithPassword struct {
 	Email    string `json:"email" binding:"required,email"`
-	Password string `json:"password" binding:"required,min=8"`
+	Password string `json:"password" binding:"required"`
 }
 
 type AuthResponse struct {
